Change from Method to String